recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:16: error: not found: value snowSide
    snowSide(levels-1, length/3)
    ^SquareKoch:18: error: not found: value snowSide
    snowSide(levels-1, length/3)
    ^SquareKoch:21: error: not found: value snowSide
    snowSide(levels-1, length/3)
    ^SquareKoch:23: error: not found: value snowSide
    snowSide(levels-1, length/3)
    ^